# fastfuels-core

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: pre-commit.yaml  release.yml  run-tests.yml
fastfuels_core/: __init__.py  base.py  crown_profiles.py  disc_sampling.py  layersets.py  plotting.py  point_process.py  ref_data.py  treatments.py  trees.py  voxelization.py
fastfuels_core/crown_profile_models/: abc.py  beta.py  purves.py
fastfuels_core/data/: REF_JENKINS.csv  REF_SPECIES.csv  REF_TRY_DB_LEAF.csv  class_parameters.json  spcd_parameters.json  spgrp_parameters.json
fastfuels_core/fuel_moisture/: fosberg.py
fastfuels_core/itd/: local_maxima_filter.py
fastfuels_core/onramps/: duet.py  hag_pim.py
requirements/: core_requirements.txt  package_requirements.txt  python_requirements.txt
scripts/: create_spcd_parameters.py  create_spgrp_parameters.py  requirements.txt  visualize_itd.py
scripts/data/: purves_s3.csv  spcd_parameters.json  spgrp_parameters.json
tests/: test_disc_sampling.py  test_inhomogeneous_poisson.py  test_layersets.py  test_point_process.py  test_trees.py  test_voxelization.py  utils.py
tests/crown_profile_models/: test_beta.py  test_purves.py
tests/data/: plots_test_data.csv  plots_test_data.geojson  polygon.geojson  surface_fuels.geojson  surface_fuels_ex.parquet  tree_collection_from_treemap_2014.parquet  tree_collection_from_treemap_2016.parquet  treemap_2014_plots_data.geojson  treemap_2016_plots_data.geojson  trees_fia_format.parquet  trees_test_data.parquet
(+13 files in other folders)
