[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastfuels-core"
dynamic = ["version"]
description = "Core algorithms for the FastFuels project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "dask[dataframe]",
    "fastparquet",
    "geopandas",
    "nsvb",
    "numpy",
    "pandas",
    "pandera",
    "rasterio",
    "rioxarray",
    "scipy",
    "shapely>=2",
    "xarray",
]

[project.optional-dependencies]
plotting = [
    "matplotlib",
    "pyvista",
]
test = [
    "pytest",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/silvxlabs/fastfuels-core"
"Bug Tracker" = "https://github.com/silvxlabs/fastfuels-core/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fastfuels_core/_version.py"

[tool.pytest.ini_options]
log_cli = true
